Add geocode cache to gitignore
- Exclude geocode_cache.json from version control
- Cache files can be regenerated and are environment-specific

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ data/*.csv
 # Keep data directory structure
 !data/.gitkeep
 
+# Geocoding cache
+data/geocode_cache.json
+
 # Model files (if large)
 *.pkl
 *.joblib
