--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,11 @@ data/*.csv
 # Geocoding cache
 data/geocode_cache.json
 
-# Model files (if large)
-*.pkl
+# Model files in root (if large)
 *.joblib
 models/
 
-# Outputs (optional - you may want to track these)
+# Outputs - these are tracked (results, models, visualizations)
 # outputs/*.png
 # outputs/*.txt
 
