--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ numpy>=1.23.0
 scikit-learn>=1.2.0
 matplotlib>=3.6.0
 geopy>=2.3.0
-
+streamlit>=1.28.0
+plotly>=5.18.0
+folium>=0.15.0
+streamlit-folium>=0.15.0
