Add encoder files and setup for Streamlit Cloud deployment
- Add risk_encoder.pkl and crime_encoder.pkl (small files, can be pushed)
- Add setup.sh script for Streamlit Cloud to train models during deployment
- Add GIT_LFS_SETUP.md with instructions for handling large model files
- Update README with Streamlit Cloud deployment instructions
- Update .gitignore to allow .pkl files in outputs/
- Note: Large model files (risk_model.pkl 58MB, crime_model.pkl 816MB)
  cannot be pushed to GitHub without Git LFS. They will be generated
  during Streamlit Cloud deployment via setup.sh

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,6 @@ models/
 # Outputs - these are tracked (results, models, visualizations)
 # outputs/*.png
 # outputs/*.txt
+# Allow model files in outputs/ (needed for Streamlit app)
+!outputs/*.pkl
 
